# demo-video-generator

./: .env.example  .gitignore  .pre-commit-config.yaml  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  MORNING.md  Makefile  README.md  pyproject.toml
.claude/: DECISIONS.md  PM.md
.claude/agents/_shared/: audio-qa-toolkit.md  error-contract.md  eval-rubric-skeleton.md  refresh-protocol.md  remotion.md  run-artifacts.md  section-loader.md
.claude/agents/_template/: agent.compiled.md  agent.md  refresh.md
.claude/agents/caption-writer/: agent.compiled.md  agent.md  design.md  refresh.md
.claude/agents/composition-director/: agent.compiled.md  agent.md  design.md  refresh.md
.claude/agents/event-log-analyst/: agent.compiled.md  agent.md  design.md  refresh.md
.claude/agents/footage-capture/: agent.compiled.md  agent.md  design.md  refresh.md
.claude/agents/knowledge-curator/: agent.compiled.md  agent.md  design.md  refresh.md
.claude/agents/music-prompt-engineer/: agent.compiled.md  agent.md  design.md  refresh.md
.claude/agents/qa-reviewer/: agent.compiled.md  agent.md  design.md  refresh.md
.claude/agents/sfx-curator/: agent.compiled.md  agent.md  design.md  refresh.md
.claude/agents/visual-analyst/: agent.compiled.md  agent.md  design.md  refresh.md
.claude/commands/: eval-agents.md  make-video.md  refresh-agents.md
.claude/lean/: MEMORY.md  architecture.md  decisions.md  ideas.md
.claude/plans/: v2-implementation-plan.md
.github/workflows/: ci.yml  evals.yml
evals/: runner.py  seed_cases.py
remotion/: .prettierignore  package-lock.json  package.json  tsconfig.json
remotion/src/: DemoVideo.tsx  DvgSelfDemo.tsx  Root.tsx  render-self-demo.ts  render.ts
runs/_demos/: dvg_demo_v1_composition.json  dvg_moods_v1_composition.json  dvg_sequence_v1_composition.json  dvg_short_v1_composition.json  h2_composition.json  h4_e2e_composition.json
runs/_demos/.dvg_external_v1_work/: filter_complex.txt
runs/_demos/.dvg_external_v2_work/: filter_complex.txt
runs/_demos/h1/: composition.json
runs/refresh/: manifest.json
schemas/: .checksums  .versions  analysis.schema.json  captions.schema.json  composition.schema.json  contracts.json  error.schema.json  manifest.schema.json  qa.schema.json
scripts/: benchmark.py  build_final_demo.py  build_moods_demo.py  build_sequence_demo.py  build_short_demo.py  demo_h1.py  demo_h2.py
src/demo_video_generator/: __init__.py  atomic.py  cli.py  doctor.py  errors.py  manifest.py  run.py
src/demo_video_generator/analysis/: __init__.py
src/demo_video_generator/captions/: __init__.py
src/dvg/: __init__.py  cli.py  easing.py  keyframes.py  models.py
tests/: README.md  conftest.py
tests/contract/: test_codegen_parity.py  test_manifest_instances.py  test_schemas_validate.py
tests/e2e/: test_driver_skeleton.py  test_walking_skeleton.py
tests/fixtures/: demo-brief.json  end_card.html  server.py  title_intro.html
tests/perceptual/: dhash.py  test_dhash.py
tests/unit/: test_analysis.py  test_ass.py  test_atomic.py  test_capture.py  test_composition.py  test_content_aware_invalidation.py  test_director.py  test_errors.py  test_eval_runner.py  test_fixture_server.py  test_keyframes.py  test_manifest.py  test_migrations.py  test_music.py  test_playwright_headed.py  test_review_toolkit.py  test_sequence.py  test_shape.py  test_smoke_render.py  test_soundtracks.py  test_visual_analyst.py
(+125 files in other folders)
