[project]
name = "demo-video-generator"
version = "0.1.0"
description = "Tool that turns 'a thing you built' into a production-quality demo video. v1: 9 specialized Claude Code agents driven by a deterministic Python driver."
requires-python = ">=3.12"
authors = [{ name = "Ashwin Chidambaram" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.7",
    "rich>=13.7",
    "jsonschema>=4.21",
    # Phase 2-8 deps:
    "librosa>=0.10",        # audio QA segmentation (Phase 8)
    "soundfile>=0.12",      # backend for librosa
    "scenedetect>=0.6",     # visual-analyst (Phase 3)
    "playwright>=1.45",     # footage-capture URL path (Phase 2.5; runtime gated on TCC)
    "requests>=2.31",       # knowledge-curator WebFetch (Phase 10)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "datamodel-code-generator>=0.25",
    "pre-commit>=3.7",
]

[project.scripts]
dvg = "demo_video_generator.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demo_video_generator"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Typer idiom: function-call defaults are how options are declared.
"src/demo_video_generator/cli.py" = ["B008"]
# Eval runner is a long branchy validator; unrolled if-checks are clearer
# than nested-and combinations.
"evals/runner.py" = ["SIM102"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
exclude = ["src/demo_video_generator/schemas/.*"]
# Generated schema modules ship with their own typing; we trust pydantic-generated code.

[[tool.mypy.overrides]]
module = "demo_video_generator.schemas.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
