[project]
name = "dvg"
version = "0.2.0"
description = "Lean demo-video generator: capture → analyze → compose → render. Single language Python, ffmpeg-driven."
requires-python = ">=3.12"
authors = [{ name = "Ashwin Chidambaram" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.7",
    "rich>=13.7",
    "Pillow>=10.0",
    "imagehash>=4.3",
    "playwright>=1.42",
    "anyio>=4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
dvg = "dvg.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dvg"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/dvg/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "dvg.review.telemetry"
disable_error_code = ["no-untyped-call"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
